--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "e-comprocessing/magento2-ecp-plugin",
     "description": "E-ComProcessing Payment Gateway for Magento 2",
     "type": "magento2-module",
-    "version": "1.1.3",
+    "version": "1.2.0",
     "license": [
         "OSL-3.0"
     ],
@@ -14,8 +14,8 @@
         }
     ],
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-        "genesisgateway/genesis_php": "1.4.*"
+        "php": "~5.5.9|~5.6.0|~7.0.0",
+        "genesisgateway/genesis_php": "1.8.*"
     },
     "keywords": [
         "e-comprocessing",
@@ -36,6 +36,8 @@
         "refund",
         "void",
         "3d-secure",
+        "alipay",
+        "earthport",
         "neteller",
         "ezeewallet",
         "paybyvouchers",
@@ -44,7 +46,14 @@
         "ppro",
         "ideal",
         "cashu",
-        "elv",
+        "inpay",
+        "p24",
+        "paypal",
+        "paypal_express",
+        "paysec",
+        "trustly",
+        "trustly_sale",
+        "trustly_withdrawal",
         "eps",
         "giropay",
         "przelewy24",
@@ -52,11 +61,27 @@
         "safetypay",
         "teleingreso",
         "trustpay",
+        "bcmc",
+        "mybank",
         "webmoney",
         "poli",
+        "sdd",
+        "sct_payout",
+        "sdd_refund",
+        "sdd_recurring",
+        "idebit",
+        "idebit_payin",
+        "idebit_payout",
+        "insta_debit",
+        "insta_debit_payin",
+        "insta_debit_payout",
+        "citadel",
+        "citadel_payin",
+        "citadel_payout",
         "tc40",
         "fraud",
-        "chargeback"
+        "chargeback",
+        "wechat"
     ],
     "autoload": {
         "files": [
