--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,27 @@
 {
-    "name": "e-comprocessing/magento2-ecp-plugin",
-    "description": "E-ComProcessing Payment Gateway for Magento 2",
+    "name": "ecomprocessing/magento2-ecp-plugin",
+    "description": "E-Comprocessing Payment Gateway for Magento 2",
     "type": "magento2-module",
-    "version": "1.2.2",
+    "version": "1.2.11",
     "license": [
-        "OSL-3.0"
+        "GPL-2.0"
     ],
     "authors": [
         {
-            "name": "E-ComProcessing",
+            "name": "ecomprocessing",
             "email": "shopping_carts@e-comprocessing.com",
-            "homepage": "http://www.e-comprocessing.com"
+            "homepage": "https://e-comprocessing.com"
         }
     ],
     "require": {
-        "php": "~5.5.9|~5.6.0|~7.0.0",
-        "genesisgateway/genesis_php": "1.8.*"
+        "php": "7.0.2|7.0.4|~7.0.6|7.1.*|7.2.*|7.3.*|7.4.*|8.0.*|8.1.*",
+        "genesisgateway/genesis_php": "1.20.1"
+    },
+    "require-dev": {
+        "fzaninotto/faker": "1.*@stable"
     },
     "keywords": [
-        "e-comprocessing",
+        "ecomprocessing",
         "magento2_module",
         "magento2_payment_module",
         "payment_gateway",
@@ -26,6 +29,13 @@
         "payment_processing",
         "magento2_payment_processing",
         "e-commerce",
+        "genesis",
+        "genesisgateway",
+        "payments",
+        "payment_gateway",
+        "payment_processing",
+        "e-commerce",
+        "pci-dss",
         "visa",
         "mastercard",
         "debit_card",
@@ -36,59 +46,92 @@
         "refund",
         "void",
         "3d-secure",
-        "alipay",
-        "earthport",
-        "neteller",
-        "ezeewallet",
-        "paybyvouchers",
-        "sofort",
-        "paysafecard",
-        "ppro",
-        "ideal",
+        "apple_pay",
+        "aura",
+        "boleto",
+        "baloto",
+        "banco_do_brasil",
+        "bancontact",
+        "bitpay",
+        "blacklist",
+        "cabal",
         "cashu",
-        "inpay",
-        "p24",
-        "paypal",
-        "paypal_express",
-        "paysec",
-        "trustly",
-        "trustly_sale",
-        "trustly_withdrawal",
+        "cencosud",
+        "chargeback",
+        "consumers",
+        "container_store",
+        "credit",
+        "efecty",
+        "elo",
         "eps",
+        "ezeecard",
+        "ezeewallet",
+        "fashioncheque",
+        "fraud",
+        "fx",
+        "fx_rate",
+        "fx_rates",
+        "fx_search",
+        "fx_tier",
+        "fx_tiers",
         "giropay",
-        "przelewy24",
-        "qiwi",
-        "safetypay",
-        "teleingreso",
-        "trustpay",
-        "bcmc",
-        "mybank",
-        "webmoney",
-        "poli",
-        "sdd",
-        "sct_payout",
-        "sdd_refund",
-        "sdd_recurring",
+        "google_pay",
+        "ideal",
         "idebit",
         "idebit_payin",
         "idebit_payout",
+        "inpay",
         "insta_debit",
         "insta_debit_payin",
         "insta_debit_payout",
-        "citadel",
-        "citadel_payin",
-        "citadel_payout",
+        "intersolve",
+        "multibanco",
+        "mybank",
+        "neosurf",
+        "neteller",
+        "oxxo",
+        "p24",
+        "pagofacil",
+        "paypal",
+        "paypal_express",
+        "paysafecard",
+        "paysec",
+        "payu",
+        "poli",
+        "ppro",
+        "preauthorization",
+        "preauthorization_incremental",
+        "preauthorization_partial",
+        "przelewy24",
+        "reconcile",
+        "redpagos",
+        "reports",
+        "safetypay",
+        "santander",
+        "sca",
+        "sct_payout",
+        "sdd",
+        "sdd_recurring",
+        "sdd_refund",
+        "sofort",
         "tc40",
-        "fraud",
-        "chargeback",
-        "wechat"
+        "transfer_to",
+        "trustly",
+        "trustly_sale",
+        "trustpay",
+        "webmoney",
+        "webpay",
+        "wechat",
+        "wpf",
+        "upi",
+        "postfinance"
     ],
     "autoload": {
         "files": [
             "registration.php"
         ],
         "psr-4": {
-            "EComProcessing\\Genesis\\": ""
+            "EComprocessing\\Genesis\\": ""
         }
     }
 }
