--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ecomprocessing/magento2-ecp-plugin",
     "description": "E-Comprocessing Payment Gateway for Magento 2",
     "type": "magento2-module",
-    "version": "1.2.13",
+    "version": "1.3.3",
     "license": [
         "GPL-2.0"
     ],
@@ -15,10 +15,7 @@
     ],
     "require": {
         "php": "7.0.2|7.0.4|~7.0.6|7.1.*|7.2.*|7.3.*|7.4.*|8.0.*|8.1.*",
-        "genesisgateway/genesis_php": "1.21.2"
-    },
-    "require-dev": {
-        "fzaninotto/faker": "1.*@stable"
+        "genesisgateway/genesis_php": "1.21.6"
     },
     "keywords": [
         "ecomprocessing",
@@ -40,6 +37,7 @@
         "mastercard",
         "debit_card",
         "credit_card",
+        "3DSv2",
         "authorize",
         "capture",
         "recurring",
@@ -135,5 +133,8 @@
         "psr-4": {
             "Ecomprocessing\\Genesis\\": ""
         }
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.20"
     }
 }
