--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ecomprocessing/magento2-ecp-plugin",
     "description": "E-Comprocessing Payment Gateway for Magento 2",
     "type": "magento2-module",
-    "version": "1.3.7",
+    "version": "1.3.10",
     "license": [
         "GPL-2.0"
     ],
@@ -14,8 +14,8 @@
         }
     ],
     "require": {
-        "php": "7.0.2|7.0.4|~7.0.6|7.1.*|7.2.*|7.3.*|7.4.*|8.0.*|8.1.*|8.2.*",
-        "genesisgateway/genesis_php": "1.24.1"
+        "php": "7.0.2|7.0.4|~7.0.6|7.1.*|7.2.*|7.3.*|7.4.*|8.0.*|8.1.*|8.2.*|8.3.*",
+        "genesisgateway/genesis_php": "2.0.2"
     },
     "keywords": [
         "ecomprocessing",
@@ -52,6 +52,7 @@
         "bancontact",
         "bitpay",
         "blacklist",
+        "blik",
         "cabal",
         "cashu",
         "cencosud",
@@ -72,7 +73,6 @@
         "fx_search",
         "fx_tier",
         "fx_tiers",
-        "giropay",
         "google_pay",
         "ideal",
         "idebit",
@@ -84,6 +84,7 @@
         "insta_debit_payout",
         "interac",
         "intersolve",
+        "latipay",
         "multibanco",
         "mybank",
         "neosurf",
@@ -98,7 +99,6 @@
         "payu",
         "pix",
         "poli",
-        "ppro",
         "preauthorization",
         "preauthorization_incremental",
         "preauthorization_partial",
@@ -114,6 +114,7 @@
         "sdd_recurring",
         "sdd_refund",
         "sofort",
+        "spei",
         "tc40",
         "transfer_to",
         "trustly",
@@ -135,6 +136,55 @@
         }
     },
     "require-dev": {
-        "fakerphp/faker": "^1.20"
+        "fakerphp/faker": "^1.20",
+        "magento/magento-coding-standard": "*",
+        "squizlabs/php_codesniffer": "~3.6.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
+        "phpmd/phpmd": "^2.9.1"
+    },
+    "scripts": {
+        "install-magento": [
+            "bin/install"
+        ],
+        "install-dev": [
+            "@putenv PLUGIN_ENV=linter",
+            "composer install"
+        ],
+        "test": [
+            "@install-magento",
+            "@php-unit"
+        ],
+        "php-unit": [
+            "Test/Dummy/vendor/bin/phpunit -c Test/Dummy/app/code/Ecomprocessing/Genesis/phpunit.xml Test/Dummy/app/code/Ecomprocessing/Genesis/Test/Unit --bootstrap Test/Dummy/bootstrap.php "
+        ],
+        "php-cs": [
+            "@install-dev",
+            "vendor/bin/phpcs . --report=full --colors --extensions=php --standard=Magento2,.phpcs.xml"
+        ],
+        "php-md": [
+            "@install-dev",
+            "vendor/bin/phpmd . ansi ./.phpmd.xml --not-strict"
+        ],
+        "php-unit-jenkins": [
+            "Test/Dummy/vendor/bin/phpunit -c Test/Dummy/app/code/Ecomprocessing/Genesis/phpunit.xml --log-junit phpunit_report.xml Test/Dummy/app/code/Ecomprocessing/Genesis/Test/Unit --bootstrap Test/Dummy/bootstrap.php "
+        ],
+        "php-cs-jenkins": [
+            "PLUGIN_ENV=linter vendor/bin/phpcs . --extensions=php --standard=Magento2,.phpcs.xml --report=checkstyle --report-file=phpcs_report.xml"
+        ],
+        "php-md-jenkins": [
+            "PLUGIN_ENV=linter vendor/bin/phpmd . xml ./.phpmd.xml --not-strict --reportfile phpmd_report.xml --ignore-violations-on-exit"
+        ],
+        "styles": [
+            "@php-cs",
+            "@php-md"
+        ],
+        "pack": [
+            "bin/pack"
+        ]
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
